# game-lattice

./: .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  build-log.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
docs/research/2026-07-bash-parser-benchmark/: .gitattributes  PROVENANCE.md  bash_parser_acceptance_matrix.csv  bash_parser_acceptance_results.json  bash_parser_primary_source_review.md  bash_parser_review_methodology.md
docs/superpowers/plans/: 2026-06-27-doc-lattice-linear.md  2026-06-27-doc-lattice-local-core.md  2026-06-27-game-lattice-linear.md  2026-06-28-doc-lattice-init.md  2026-06-28-doc-lattice-linear-not-found-redesign.md  2026-06-28-doc-lattice-lint.md  2026-06-28-game-lattice-init.md  2026-06-28-game-lattice-linear-not-found-redesign.md  2026-06-28-game-lattice-lint.md  2026-06-29-doc-lattice-release-automation.md  2026-06-29-game-lattice-release-automation.md  2026-07-01-github-slug-anchors.md  (+28 more)
helper/doc-lattice-shell-parser/: bounds_test.go  emit.go  emit_test.go  gen_tables.go  guard.go  guard_test.go  identity.go  identity_test.go  main.go  refusal_test.go  tables_gen.go  tables_test.go  walk.go  walk_test.go  wire.go  wire_test.go
procedures/: code-conventions.md
scripts/: bench_load_cache.py  bench_sections.py  build_successor_helper.sh  check_helper_digest.py  check_typing_boundaries.py  check_version_sync.py  checkpoint_derive_probe_spans.py  checkpoint_manifest.py  checkpoint_record_scanner_inputs.py  derive_successor_labels.py  extract_release_notes.py  generate_github_slugger_data.py  generate_protocol_negatives.py  normalize_legacy_reasons.py  release_gate.py  successor_checkpoint_manifest.py
src/doc_lattice/: __init__.py  _github_slugger_data.py  cache.py  cli.py  config.py  constants.py  datetime_utils.py  discovery.py  error_types.py  frontmatter_parser.py  hashing.py  impact.py  linear_client.py  linear_fetch.py  linear_parser.py  linear_query.py  linear_render.py  lint.py  loader.py  markdown_compat.py  orchestrate.py  persistence.py  reconcile.py  reconcile_transaction.py  render.py  report_render.py  scaffold.py  sections.py  stale_shipped.py  tickets.py  version_check.py
src/game_lattice/: __init__.py  cache.py  check.py  cli.py  config.py  constants.py  datetime_utils.py  discovery.py  error_types.py  frontmatter_parser.py  impact.py  linear_client.py  linear_parser.py  linear_query.py  linear_render.py  lint.py  loader.py  model.py  orchestrate.py  path_utils.py  reconcile.py  render.py  report_render.py  resolve.py  scaffold.py  sections.py  stale_shipped.py  text_utils.py  version_check.py
tests/: conftest.py  github_ci_evaluation_harness.py  test_bench_sections.py  test_cache.py  test_cache_lookup.py  test_cache_schema.py  test_cache_state.py  test_cache_store.py  test_check.py  test_cli.py  test_config.py  test_constants.py  test_conventions.py  test_datetime_utils.py  test_discovery.py  test_error_types.py  test_frontmatter_parser.py  test_github_ci_audit.py  test_github_ci_bootstrap.py  test_github_ci_checkpoint.py  test_github_ci_direct_marker_scanner.py  test_github_ci_evaluation_gates.py  test_github_ci_filesystem.py  test_github_ci_identity.py  test_github_ci_launcher_policy.py  test_github_ci_reachability.py  test_github_ci_render.py  test_github_ci_semantic_differential.py  test_github_ci_shell_scanner.py  test_github_ci_workflow_parser.py  test_hashing.py  test_helper_digest.py  test_impact.py  test_linear_client.py  test_linear_fetch.py  test_linear_parser.py  test_linear_query.py  test_linear_render.py  test_lint.py  test_loader.py  (+22 more)
tests/cli/: __init__.py  helpers.py  test_check.py  test_ci.py  test_contract.py  test_graph.py  test_impact.py  test_init.py  test_linear.py  test_lint.py  test_output.py  test_reconcile.py  test_runtime.py
(+145 files in other folders)
