[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_lattice"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[project]
name = "doc-lattice"
version = "0.9.0"
description = "Traceability engine for design and production documentation"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Rick Passero", email = "24213466+riskandreason@users.noreply.github.com"},
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "ruamel.yaml>=0.18",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "ty>=0.0.26",
    "pre-commit>=3.0",
    "hypothesis>=6.0",
]

[project.scripts]
doc-lattice = "doc_lattice.cli:main"

# --- urls start ---
[project.urls]
Homepage = "https://github.com/Guardantix/doc-lattice"
Source = "https://github.com/Guardantix/doc-lattice"
Issues = "https://github.com/Guardantix/doc-lattice/issues"
Changelog = "https://github.com/Guardantix/doc-lattice/blob/main/CHANGELOG.md"
Releases = "https://github.com/Guardantix/doc-lattice/releases"
# --- urls end ---

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=doc_lattice", "--cov-branch", "--cov-report=term-missing",
    "--strict-markers", "--strict-config", "-ra",
]

[tool.coverage.run]
source = ["src/doc_lattice"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "C4", "UP", "SIM", "T20", "RUF", "PT", "ANN", "ARG", "TCH", "PTH", "ERA", "PL"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "T201", "ANN", "PLR2004"]
"scripts/**" = ["T201", "S"]
